# android_fast_dev_tool

./: .gitignore  ATest.txt  FirstPageComponent.js  README.md  SamplePageComponent.js  SecondPageComponent.js  build.gradle  gradle.properties  index.android.js  package.json  reademe.md  settings.gradle
app/: build.gradle  fabric.properties  google-services.json  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: hello.we  index.android.bundle
app/src/main/cpp/: CMakeLists.txt
app/src/main/jni/: Android.mk  api_server.db  com_zcwfeng_fastdev_ndk_NdkJniUtils.h  jnitest.c
app/src/main/res/anim/: animation_scroll_x.xml
app/src/main/res/drawable/: gif_v520.xml  gift_trophy1.xml  gift_trophy2.xml  gift_trophy3.xml  gift_trophy4.xml  ic_blur_on_white_24dp.xml  main_2_selecter.xml  main_3_selecter.xml  main_4_selecter.xml  main_selecter.xml  mediaplayer_brightseek_thumb.xml  pathdata_1.xml  test.xml  (+4 more)
commonutils/src/main/: AndroidManifest.xml
componentlibs/: build.gradle
componentlibs/src/main/: AndroidManifest.xml
componentlibs/src/main/rs/: histEq.rs
findbugs/: findbugs-filter.xml
glidlibrary/: build.gradle
glidlibrary/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
httplibs/: build.gradle
httplibs/src/main/: AndroidManifest.xml
mvvmlibrary/: build.gradle
mvvmlibrary/src/main/: AndroidManifest.xml
okhttputils/: build.gradle  proguard-rules.pro
okhttputils/src/main/: AndroidManifest.xml
plugin/: build.gradle
pmd/: pmd-ruleset.xml
relinker/: build.gradle
wkvideoplayer/: build.gradle
(+513 files in other folders)
